--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import './homepage';
 @import './navigation.scss';
+@import './project.scss';
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand|Secular+One&display=swap');
 
@@ -7,6 +8,7 @@ html, body {
     font-family: 'Quicksand-Regular', sans-serif;
     scroll-behavior: smooth;
     font-size: 20px;
+    padding: 0;
 }
 
 p, a, h3 {
